--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
+        "nunomaduro/larastan": "^0.5.1",
         "phpunit/phpunit": "^8.0"
     },
     "config": {
