--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "nunomaduro/larastan": "^0.5.1",
+        "nunomaduro/phpinsights": "^1.12",
         "phpunit/phpunit": "^8.0"
     },
     "config": {
