--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "sass-loader": "^8.0.0",
         "tailwindcss": "^1.0",
         "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "alpinejs": "^1.9.8"
     }
 }
