--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "mad-web/laravel-initializer": "^2.0"
+        "league/fractal": "^0.19.2",
+        "mad-web/laravel-initializer": "^2.0",
+        "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
