--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "path",
+            "url": "packages/cao-minh-duc/l5-repository"
+        }
+    ],
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
@@ -14,7 +20,7 @@
         "laravel/tinker": "^2.0",
         "league/fractal": "^0.19.2",
         "mad-web/laravel-initializer": "^2.0",
-        "prettus/l5-repository": "^2.6"
+        "cao-minh-duc/l5-repository": "@dev"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
