--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,9 @@
         "laravel"
     ],
     "license": "MIT",
-    "repositories": [
-        {
-            "type": "path",
-            "url": "packages/cao-minh-duc/l5-repository"
-        }
-    ],
     "require": {
         "php": "^7.2",
-        "cao-minh-duc/l5-repository": "@dev",
+        "cao-minh-duc/l5-repository": "*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
